--- a/app/templates/index.html.twig
+++ b/app/templates/index.html.twig
@@ -6,7 +6,7 @@
 
 {% if not user.id %}
     
-<div class="d-flex align-items-center w-100 vh-100">
+<div class="d-flex align-items-center">
     <div class="container-sm">
         <form action="/" method="POST">
             <legend>Sing in (no registartion needed.)</legend>
