--- a/app/templates/base.html.twig
+++ b/app/templates/base.html.twig
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html lang="en" class="h-100">
   <head>
     <!-- Required meta tags -->
     <meta charset="utf-8">
@@ -10,16 +10,38 @@
 
     <title>{% block title %}{% endblock %}</title>
   </head>
-  <body>
-    {% if user.login and user.id %}
-      <span>user: </span><b>{{ user.login }}</b>
-      <form action="/" method="POST">
-        <input hidden name="loguot" value="true"> 
-        <button type="submit" class="btn btn-info">Logout</button>
-      </form>
-    {% endif %}
+  <body class="h-100">
+      <div class="body-page d-flex flex-column h-100">
+        <header class=""  style="height: 90px">
+            <div class="container mx-auto">
+            
+            {% if user.login and user.id %}
+            <div class="auth d-flex justify-content-end">
+              
+              <form action="/" method="POST">
+                <label>
+                  <span>user: </span><b>{{ user.login }}</b>
+                </label>
+                <input hidden name="loguot" value="true"> 
+                <button type="submit" class="btn btn-info">Logout</button>
+              </form>
+            </div>
+            {% endif %}
+
+            </div>
+        </header>
+        <div class="main-section flex-fill">
+          <div class="container mx-auto">
     
-    {% block body %}{% endblock %}
+          {% block body %}{% endblock %}
+
+          </div>
+        </div>
+        <footer class="" style="height: 90px">
+          <div class="container footer mx-auto">
+          </div>
+        </footer>
+      </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 
